2001-11-06  Jacob Smullyan  <smulloni@smullyan.org>

	* test/index.html: added some rudimentary tests.
	* docs/opman/opman.tex (section{Remote Components}): some
	documentation about remote components.

2001-11-02  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/Services/userdir.py (__initHooks): changed hooks used,
	so userdir will work with httpd (cleanup was broken, as EndSession
	is only called by httpd at the end of an http session).

2001-10-30  Andrew Csillag  <drew@localhost.localdomain>

	* 3.1.3 cut

	* SkunkWeb/Services/remote/protocol.py: now returns the exception
	status flag so we don't have to resort to a hack to determine
	if the return result is in fact, an exception.

	* SkunkWeb/Services/remote/handler.py: now uses fullCallComponent
	to do the call.

	* SkunkWeb/Services/remote_client.py: now deals properly with
	the new remote call protocol

	* SkunkWeb/Services/requestHandler/requestHandler.py: fixed a
	DEBUG message so it won't barf on a tuple.

	* SkunkWeb/Services/remote_client.py: fixed so it works again since
	I broke it adding the rendered/expired flags to the return value
	of callComponent() DUH! !@#&!*(@#^!

2001-10-29  Andrew Csillag  <drew@localhost.localdomain>

	* docs/opman/opman.tex: updated with swcgi stuff

	* NEWS: updated

	* SkunkWeb/Makefile.in, SkunkWeb/configure.in, SkunkWeb/configure:
	added stuff to configure/install swcgi

	* SkunkWeb/swcgi.py.in: added CGI adaptor

2001-10-28  Andrew Csillag  <drew@localhost.localdomain>

	* pylibs/AE/Executables.py(STMLExecutable.mergeNamespaces): fixed
	so handles **kw signatures properly

	* pylibs/AE/Component.py: Ok, finally got caching working right

2001-10-24  Drew Csillag  <drew@naxos.starmedia.net>

	* ACKS: added Stephen Coursen

	* pylibs/AE/Executables.py: fixed so that stdout always points
	to the right place

	* pylibs/AE/Component.py: fix so expiration actually works (
	specifically <:cache tags:>)
	
2001-10-22  Jacob Smullyan  <smulloni@smullyan.org>
