@@ -5,3 +5,4 @@ htdocs.par
 var
 etc
 config.log config.cache config.status Makefile sw.conf skunkweb.py swpython.py swmgr
+swcgi
