@@ -1,13 +1,15 @@
 <html>
-<title>Apache / AED communication error</title>
+<head>
+<title>Apache / SkunkWeb communication error</title>
+</head>
 <body>
 <p>
-<b>An error was encountered during Apache/AED communication</b>
+<b>An error was encountered during Apache/SkunkWeb communication</b>
 </p>
 
 <p>
-The error is likely due to Apache misconfiguration or AED not running. Please
-correct and try again.
+The error is likely due to Apache misconfiguration or SkunkWeb not running. 
+Please correct and try again.
 </p>
 
 <p>
